# UT3-DataAnalysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  point.csv
Archive/: CMakeLists.txt  main.cpp  osc.csv
AstranisBJT_G4Model/: CMakeLists.txt  README.md
AstranisBJT_G4Model/AnalysisScripts/: Ana.C  Ana.h  CMakeLists.txt  DoseAnalysis.C  TrackAnalysis.C  doseDepAll.1E6.5mrad.csv  doseDepAll.32E4.0mrad.electron.csv  doseDepAll.32E4.0mrad.proton.csv  doseDepAll.625E5.3mrad.csv  doseDepAll.625E5.5mrad.csv
AstranisBJT_G4Model/G4Sim/: CMakeLists.txt  dosimetry.mac  sim.cc  vis.mac
AstranisBJT_G4Model/G4Sim/GDML/: AstranisGDML-worldVOL.gdml  AstranisGDML.FCStd  AstranisTestGDML-worldVOL.gdml  AstranisTestGDML.FCStd  DieShotCorrect.FCStd  DieShotCorrect.step  DieSizeCorrect.gdml  SOT23.step  SOT23Model.FCStd
AstranisBJT_G4Model/G4Sim/inc/: ParticleSD.hh  actioninit.hh  detcon.hh  generator.hh
AstranisBJT_G4Model/G4Sim/src/: ParticleSD.cc  actioninit.cc  detcon.cc  generator.cc  runaction.cc
AstranisDataAnalysis/: FitData.txt
GasJetDevelopment/: README.md
Oscilloscope/: C2--ICT-20240625--00008.txt  C2--ICT-20240625--00010.txt  C2--ICT-20240625--00012.txt  C2--ICT-20240625--00013.txt  C2--ICT-20240625--00019.txt  C2--ICT-20240625--00021.txt  C2--ICT-20240625--00022.txt  C2--ICT-20240625--00024.txt  C2--ICT-20240625--00027.txt  C2--ICT-20240625--00029.txt  C2--ICT-20240625--00030.txt  C2--ICT-20240625--00031.txt  C2--ICT-20240625--00034.txt  C2--ICT-20240625--00035.txt  C2--ICT-20240625--00036.txt  (+9 more)
PicoScopeICT/CustomClient/HWControl/: CMakeLists.txt  PCH.h  main.cpp
PicoScopeICT/CustomClient/HWControl/camera_interface/: Camera.cpp  CameraProperties.h
PicoScopeICT/CustomClient/HWControl/camera_interface/PCO/: PCOCameraProperties.cpp
PicoScopeICT/CustomClient/HWControl/hw_interface/: Camera.h  CameraManager.h
PicoScopeICT/CustomClient/HWControl/hw_interface/Basler/: BaslerCameraProperties.h
PicoScopeICT/CustomClient/HWControl/hw_interface/FLIR/: FLIRCamera.cpp  FLIRCamera.h
PicoScopeICT/CustomClient/HWControl/hw_interface/PCO/: PCOCamera.cpp  PCOCamera.h
PicoScopeICT/CustomClient/HWControl/resources/: Default.pssettings  app.rc
PicoScopeICT/CustomClient/HWControl/scope_interface/: PSConfig.cpp  PSConfig.h  PSDataProcessor.cpp  PSDataProcessor.h  PSDevice.cpp  PSDevice.h  PSDriver.cpp  ScopeManager.cpp  ScopeManager.h
PicoScopeICT/CustomClient/HWControl/ui/camera_ui/: CameraControlView.cpp
PicoScopeICT/CustomClient/HWControl/ui/picoscope_ui/: PSControlView.cpp  PSControlView.h  PSPostProcessingView.cpp  PSPostProcessingView.h  ScopeControlView.cpp  ScopeControlView.h
PicoScope_Recalib/: CMakeLists.txt  README.md  main.cpp
PicoScope_Recalib/20250114-LeCroy/: C1--20250114--00000.txt  C1--20250114--00001.txt  C1--20250114--00002.txt  C1--20250114--00003.txt  C1--20250114--00004.txt  C1--20250114--00005.txt  C1--20250114--00006.txt  C1--20250114--00007.txt  C1--20250114--00008.txt  C1--20250114--00009.txt  C1--20250114--00010.txt  C1--20250114--00011.txt  C1--20250114--00012.txt  C1--20250114--00013.txt  C1--20250114--00014.txt  C1--20250114--00015.txt  C1--20250114--00016.txt  C1--20250114--00017.txt  C1--20250114--00018.txt  C1--20250114--00019.txt  C1--20250114--00020.txt  C1--20250114--00021.txt  C1--20250114--00022.txt  C1--20250114--00023.txt  C1--20250114--00024.txt  C1--20250114--00025.txt  C1--20250114--00026.txt  C1--20250114--00027.txt  C1--20250114--00028.txt  C1--20250114--00029.txt  C1--20250114--00030.txt  C1--20250114--00031.txt  C1--20250114--00032.txt  C1--20250114--00033.txt  C1--20250114--00034.txt  C1--20250114--00035.txt  C1--20250114--00036.txt  C1--20250114--00037.txt  C1--20250114--00038.txt  C1--20250114--00039.txt  (+337 more)
PicoScope_Recalib/20250114-PicoScope/: 20250114_01.csv  20250114_02.csv  20250114_03.csv  20250114_04.csv  20250114_05.csv  20250114_06.csv  20250114_07.csv  20250114_08.csv  20250114_09.csv  20250114_10.csv  20250114_11.csv  20250114_12.csv  20250114_13.csv  20250114_14.csv  20250114_15.csv  20250114_16.csv  20250114_17.csv  20250114_18.csv  20250114_19.csv  20250114_20.csv  20250114_21.csv  20250114_22.csv  20250114_23.csv  20250114_24.csv  20250114_25.csv  20250114_26.csv  20250114_27.csv  20250114_28.csv  20250114_29.csv  20250114_30.csv  20250114_31.csv  20250114_32.csv  20250114_33.csv  20250114_34.csv  20250114_35.csv  20250114_36.csv  20250114_37.csv  20250114_38.csv  20250114_39.csv  20250114_40.csv  (+12 more)
PicoScope_Recalib/20250219-ICT/: wf_10.csv  wf_13.csv  wf_16.csv  wf_18.csv  wf_2.csv  wf_24.csv  wf_26.csv  wf_3.csv  wf_32.csv  wf_38.csv  wf_41.csv  wf_43.csv  wf_44.csv  wf_45.csv  wf_48.csv  wf_5.csv  wf_51.csv  wf_54.csv  wf_55.csv  wf_56.csv  wf_66.csv  wf_70.csv  wf_71.csv  wf_73.csv  wf_75.csv  wf_77.csv  wf_84.csv  wf_85.csv  wf_89.csv  wf_90.csv  wf_91.csv  wf_92.csv  wf_95.csv  wf_97.csv  wf_99.csv
PicoScope_Recalib/20250219-LANEX/: shot_000239.tif  shot_000240.tif  shot_000241.tif  shot_000242.tif  shot_000243.tif  shot_000244.tif  shot_000245.tif  shot_000246.tif  shot_000247.tif  shot_000248.tif  shot_000249.tif  shot_000250.tif  shot_000251.tif  shot_000252.tif  shot_000253.tif  shot_000254.tif  shot_000255.tif  shot_000256.tif  shot_000257.tif  shot_000258.tif  shot_000259.tif  shot_000260.tif  shot_000261.tif  shot_000262.tif  shot_000263.tif  shot_000264.tif  shot_000265.tif  shot_000266.tif  shot_000267.tif  shot_000268.tif  shot_000269.tif  shot_000270.tif  shot_000271.tif  shot_000272.tif  shot_000273.tif  shot_000274.tif  shot_000275.tif  shot_000276.tif  shot_000277.tif  shot_000278.tif  (+60 more)
PicoScope_Recalib/20250219-PS300/: wf_0.csv  wf_1.csv  wf_10.csv  wf_11.csv  wf_12.csv  wf_13.csv  wf_14.csv  wf_15.csv  wf_16.csv  wf_17.csv  wf_18.csv  wf_19.csv  wf_2.csv  wf_21.csv  wf_22.csv  wf_23.csv  wf_24.csv  wf_25.csv  wf_26.csv  wf_27.csv  wf_28.csv  wf_29.csv  wf_3.csv  wf_30.csv  wf_31.csv  wf_32.csv  wf_33.csv  wf_34.csv  wf_35.csv  wf_36.csv  wf_37.csv  wf_38.csv  wf_39.csv  wf_4.csv  wf_40.csv  wf_41.csv  wf_42.csv  wf_43.csv  wf_44.csv  wf_45.csv  (+59 more)
Plot/: ChargeEnergy.txt
(+7058 files in other folders)
